// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`eligibleParentCategories() should return an empty array if the category is undefined: return non-root categories in the targeted locale 1`] = `
[
  {
    "articleCount": 0,
    "available_locales": [
      "en-US",
      "fr-FR",
    ],
    "children": [
      48,
      53,
    ],
    "created_datetime": "2022-03-17T12:52:14.243Z",
    "deleted_datetime": null,
    "help_center_id": 1,
    "id": 47,
    "translation": {
      "category_id": 47,
      "category_unlisted_id": "d5e41b205f974b0b8ae28103712b865b",
      "created_datetime": "2022-03-17T12:52:14.243Z",
      "customer_visibility": "PUBLIC",
      "deleted_datetime": null,
      "description": "",
      "image_url": null,
      "locale": "en-US",
      "parent_category_id": null,
      "seo_meta": {
        "description": null,
        "title": null,
      },
      "slug": "top-level",
      "title": "Top level",
      "updated_datetime": "2022-03-17T12:52:14.243Z",
    },
    "unlisted_id": "d5e41b205f974b0b8ae28103712b865b",
    "updated_datetime": "2022-03-17T12:52:14.243Z",
  },
  {
    "articleCount": 0,
    "available_locales": [
      "fr-FR",
      "en-US",
    ],
    "children": [
      49,
    ],
    "created_datetime": "2022-03-17T12:52:41.853Z",
    "deleted_datetime": null,
    "help_center_id": 1,
    "id": 48,
    "translation": {
      "category_id": 48,
      "category_unlisted_id": "7e4c2e95803f4918bac6ae0d57734002",
      "created_datetime": "2022-03-17T12:53:10.489Z",
      "customer_visibility": "PUBLIC",
      "deleted_datetime": null,
      "description": "",
      "image_url": null,
      "locale": "en-US",
      "parent_category_id": 47,
      "seo_meta": {
        "description": null,
        "title": null,
      },
      "slug": "level-1",
      "title": "Level 1",
      "updated_datetime": "2022-03-17T12:53:10.489Z",
    },
    "unlisted_id": "7e4c2e95803f4918bac6ae0d57734002",
    "updated_datetime": "2022-03-17T12:52:41.853Z",
  },
  {
    "articleCount": 0,
    "available_locales": [
      "fr-FR",
      "en-US",
    ],
    "children": [
      50,
    ],
    "created_datetime": "2022-03-17T12:53:43.235Z",
    "deleted_datetime": null,
    "help_center_id": 1,
    "id": 49,
    "translation": {
      "category_id": 49,
      "category_unlisted_id": "c28645f2d381483ea08a0f0d21a7a84f",
      "created_datetime": "2022-03-17T12:53:43.235Z",
      "customer_visibility": "PUBLIC",
      "deleted_datetime": null,
      "description": "",
      "image_url": null,
      "locale": "en-US",
      "parent_category_id": 48,
      "seo_meta": {
        "description": null,
        "title": null,
      },
      "slug": "level-2",
      "title": "Level 2",
      "updated_datetime": "2022-03-17T12:54:26.411Z",
    },
    "unlisted_id": "c28645f2d381483ea08a0f0d21a7a84f",
    "updated_datetime": "2022-03-17T12:54:26.401Z",
  },
]
`;

exports[`eligibleParentCategories() should return the categories including the level 2 node because it is not a children of the provided category: top level and level 1 & level 2 nodes returned 1`] = `
[
  {
    "articleCount": 0,
    "available_locales": [
      "en-US",
      "fr-FR",
    ],
    "children": [
      48,
      53,
    ],
    "created_datetime": "2022-03-17T12:52:14.243Z",
    "deleted_datetime": null,
    "help_center_id": 1,
    "id": 47,
    "translation": {
      "category_id": 47,
      "category_unlisted_id": "d5e41b205f974b0b8ae28103712b865b",
      "created_datetime": "2022-03-17T12:52:14.243Z",
      "customer_visibility": "PUBLIC",
      "deleted_datetime": null,
      "description": "",
      "image_url": null,
      "locale": "en-US",
      "parent_category_id": null,
      "seo_meta": {
        "description": null,
        "title": null,
      },
      "slug": "top-level",
      "title": "Top level",
      "updated_datetime": "2022-03-17T12:52:14.243Z",
    },
    "unlisted_id": "d5e41b205f974b0b8ae28103712b865b",
    "updated_datetime": "2022-03-17T12:52:14.243Z",
  },
  {
    "articleCount": 0,
    "available_locales": [
      "fr-FR",
      "en-US",
    ],
    "children": [
      49,
    ],
    "created_datetime": "2022-03-17T12:52:41.853Z",
    "deleted_datetime": null,
    "help_center_id": 1,
    "id": 48,
    "translation": {
      "category_id": 48,
      "category_unlisted_id": "7e4c2e95803f4918bac6ae0d57734002",
      "created_datetime": "2022-03-17T12:53:10.489Z",
      "customer_visibility": "PUBLIC",
      "deleted_datetime": null,
      "description": "",
      "image_url": null,
      "locale": "en-US",
      "parent_category_id": 47,
      "seo_meta": {
        "description": null,
        "title": null,
      },
      "slug": "level-1",
      "title": "Level 1",
      "updated_datetime": "2022-03-17T12:53:10.489Z",
    },
    "unlisted_id": "7e4c2e95803f4918bac6ae0d57734002",
    "updated_datetime": "2022-03-17T12:52:41.853Z",
  },
  {
    "articleCount": 0,
    "available_locales": [
      "fr-FR",
      "en-US",
    ],
    "children": [
      50,
    ],
    "created_datetime": "2022-03-17T12:53:43.235Z",
    "deleted_datetime": null,
    "help_center_id": 1,
    "id": 49,
    "translation": {
      "category_id": 49,
      "category_unlisted_id": "c28645f2d381483ea08a0f0d21a7a84f",
      "created_datetime": "2022-03-17T12:53:43.235Z",
      "customer_visibility": "PUBLIC",
      "deleted_datetime": null,
      "description": "",
      "image_url": null,
      "locale": "en-US",
      "parent_category_id": 48,
      "seo_meta": {
        "description": null,
        "title": null,
      },
      "slug": "level-2",
      "title": "Level 2",
      "updated_datetime": "2022-03-17T12:54:26.411Z",
    },
    "unlisted_id": "c28645f2d381483ea08a0f0d21a7a84f",
    "updated_datetime": "2022-03-17T12:54:26.401Z",
  },
]
`;

exports[`eligibleParentCategories() should return the categories without the children of the provided category: only top level category returned 1`] = `[]`;

exports[`eligibleParentCategories() should return the categories without the children of the provided level 1 category: top level and level 1 nodes returned 1`] = `
[
  {
    "articleCount": 0,
    "available_locales": [
      "en-US",
      "fr-FR",
    ],
    "children": [
      48,
      53,
    ],
    "created_datetime": "2022-03-17T12:52:14.243Z",
    "deleted_datetime": null,
    "help_center_id": 1,
    "id": 47,
    "translation": {
      "category_id": 47,
      "category_unlisted_id": "d5e41b205f974b0b8ae28103712b865b",
      "created_datetime": "2022-03-17T12:52:14.243Z",
      "customer_visibility": "PUBLIC",
      "deleted_datetime": null,
      "description": "",
      "image_url": null,
      "locale": "en-US",
      "parent_category_id": null,
      "seo_meta": {
        "description": null,
        "title": null,
      },
      "slug": "top-level",
      "title": "Top level",
      "updated_datetime": "2022-03-17T12:52:14.243Z",
    },
    "unlisted_id": "d5e41b205f974b0b8ae28103712b865b",
    "updated_datetime": "2022-03-17T12:52:14.243Z",
  },
  {
    "articleCount": 0,
    "available_locales": [
      "en-US",
    ],
    "children": [],
    "created_datetime": "2022-03-23T10:34:42.017Z",
    "deleted_datetime": null,
    "help_center_id": 1,
    "id": 53,
    "translation": {
      "category_id": 53,
      "category_unlisted_id": "df865d37bbc74135a355b56c20b40e46",
      "created_datetime": "2022-03-23T10:34:42.017Z",
      "customer_visibility": "PUBLIC",
      "deleted_datetime": null,
      "description": "",
      "image_url": null,
      "locale": "en-US",
      "parent_category_id": 47,
      "seo_meta": {
        "description": null,
        "title": null,
      },
      "slug": "level-1---b",
      "title": "level 1 - B",
      "updated_datetime": "2022-03-23T10:34:42.017Z",
    },
    "unlisted_id": "df865d37bbc74135a355b56c20b40e46",
    "updated_datetime": "2022-03-23T10:34:42.017Z",
  },
]
`;
